<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#39B8C8CA"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="334dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/muli_black"
                android:text="@string/admin_login"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="390dp"
                android:layout_height="197dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/dms_logo_foreground" />

            <LinearLayout
                android:layout_width="389dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/admin_login_box"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:paddingBottom="22dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:fontFamily="@font/muli"
                    android:text="Email Address"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/admin_login_box2"
                    android:fontFamily="@font/muli_bold"
                    android:text="@string/type_email"
                    android:textAlignment="center"
                    android:textColor="#5C737272"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:fontFamily="@font/muli"
                    android:paddingTop="10dp"
                    android:text="Password"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextPass"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/admin_login_box2"
                    android:fontFamily="@font/muli_bold"
                    android:text="@string/type_password"
                    android:textAlignment="center"
                    android:textColor="#5C737272"
                    android:textSize="14dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-7dp"
                        android:layout_weight="6"
                        android:fontFamily="@font/muli"
                        android:text="Keep me logged in"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/forgot"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="60dp"
                        android:layout_height="34dp"
                        android:layout_gravity="right"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="-43dp"
                        android:layout_weight="6"
                        android:backgroundTint="#FFFFFF"
                        android:fontFamily="@font/muli_black"
                        android:text="@string/forgot"
                        android:textColor="#E91E63"
                        android:textSize="12sp" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnlogin_norm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/logo_color"
                    android:text="@string/normal_login" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/muli"
                    android:text="or"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/facebook_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/new_facebook"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#4267B2"
                    android:text="@string/facebook_login"
                    app:icon="@drawable/com_facebook_favicon_blue"
                    app:iconGravity="textStart" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    />
                <Button
                    android:id="@+id/new_googlebtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/google_login"
                    android:textColor="@color/black"
                    app:icon="@drawable/googleg_standard_color_18"
                    app:iconGravity="textStart"
                    app:iconPadding="10dp"
                    app:iconTint="#00100D0D"
                    app:iconTintMode="src_atop" />

                <androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="horizontal"
    android:layout_gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/muli"
                    android:text="Don't have an account?"
                    android:textColor="@color/black"
                    />
                <Button
                    android:id="@+id/register"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="-5.5dp"
                    android:layout_marginLeft="-13dp"
                    android:backgroundTint="#FFFFFF"
                    android:fontFamily="@font/muli_black"
                    android:text="@string/sign_up"
                    android:textColor="#E91E63"
                    android:textSize="12sp"
                    />



                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>